--- a/covered.html
+++ b/covered.html
@@ -42,7 +42,7 @@
             height: 18px;
             cursor: pointer;
             /* Amplio margen a la derecha */
-            margin-right: 15px;
+            margin-left: 20px;
         }
         .menu-button span {
             width: 100%;
