--- a/covered.html
+++ b/covered.html
@@ -42,7 +42,7 @@
             height: 18px;
             cursor: pointer;
             /* Amplio margen a la derecha */
-            margin-left: 20px;
+            margin-right: 15px;
         }
         .menu-button span {
             width: 100%;
@@ -104,8 +104,8 @@
     <div class="header">
         <img src="https://play-lh.googleusercontent.com/p8n-LjuwErRjEWDJh53wEwL_jDccfmDMXB547j_qifRJ_VWf0ofZ33l7sOMvxZtO0w=w600-h300-pc0xffffff-pd">
         <h1>Covered Bonds Investor Presentation</h1>
-        <!-- Botón de tres rayas horizontales oculto inicialmente -->
-        <div class="menu-button" id="menuButton" style="display: none;" onclick="toggleDropdown()">
+        <!-- Botón de tres rayas horizontales -->
+        <div class="menu-button" id="menuButton" onclick="toggleDropdown()">
             <span></span>
             <span></span>
             <span></span>
