--- a/covered.html
+++ b/covered.html
@@ -41,7 +41,7 @@
         }
         /* Estilos para el iframe */
         #iframeContainer {
-            width: 95%; /* Ocupar todo el ancho disponible */
+            width: 100%; /* Ajustar el ancho del contenedor del iframe al 100% */
         }
         #iframeContainer iframe {
             width: 100%; /* Ajustar el ancho del iframe al 100% del contenedor */
@@ -91,7 +91,7 @@
     </div>
 
     <!-- Contenedor para Abanca Corporativo Completo Quarter -->
-    <div id="quarterlyContainer" style="display: none;">
+    <div id="quarterlyContainer" style="display: none; width: 100%;">
         <h2 class="presentation-title">Abanca Corporativo Completo Quarter</h2>
         <iframe title="Cover Pool Information Quarterly"
                 src="https://app.powerbi.com/reportEmbed?reportId=81ee266a-2799-4577-bba8-8f96aa531bdf&autoAuth=true&ctid=2788b953-1971-4b82-9986-b668acbd5846"
@@ -100,7 +100,7 @@
         </iframe>
     </div>
     <!-- Contenedor para Abanca Corporativo Completo Month -->
-    <div id="monthlyContainer" style="display: none;">
+    <div id="monthlyContainer" style="display: none; width: 100%;">
         <h2 class="presentation-title">Abanca Corporativo Completo Month</h2>
         <iframe title="Cover Pool Information Monthly"
                 src="https://app.powerbi.com/reportEmbed?reportId=0fc44c3d-8e91-4312-8000-b10d3dc820bd&autoAuth=true&ctid=2788b953-1971-4b82-9986-b668acbd5846"
