--- a/covered.html
+++ b/covered.html
@@ -7,14 +7,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            min-height: 100vh;
-            margin: 0;
-            padding: 0;
-            flex-direction: column;
-            transform-origin: center; /* Centrar el punto de transformación */
+            margin: 0; /* Eliminamos márgenes predeterminados */
         }
         .header {
             display: flex;
@@ -42,10 +35,13 @@
         /* Estilos para el iframe */
         #iframeContainer {
             width: 100%; /* Ajustar el ancho del contenedor del iframe al 100% */
+            display: flex;
+            justify-content: center; /* Centrar horizontalmente el contenido del iframe */
         }
         #iframeContainer iframe {
             width: 100%; /* Ajustar el ancho del iframe al 100% del contenedor */
-            height: calc(100vh - 50px); /* Ajustar la altura para que ocupe toda la pantalla excepto la altura de la imagen del header */
+            max-width: 1200px; /* Ajustar el ancho máximo del iframe según tus preferencias */
+            height: calc(100vh - 50px); /* Ajustar la altura para que ocupe toda la pantalla excepto la altura del header */
         }
         /* Estilos para la pantalla de selección de informes */
         #selectReportContainer {
@@ -91,22 +87,26 @@
     </div>
 
     <!-- Contenedor para Abanca Corporativo Completo Quarter -->
-    <div id="quarterlyContainer" style="display: none; width: 100%;">
+    <div id="quarterlyContainer" style="display: none;">
         <h2 class="presentation-title">Abanca Corporativo Completo Quarter</h2>
-        <iframe title="Cover Pool Information Quarterly"
-                src="https://app.powerbi.com/reportEmbed?reportId=81ee266a-2799-4577-bba8-8f96aa531bdf&autoAuth=true&ctid=2788b953-1971-4b82-9986-b668acbd5846"
-                frameborder="0"
-                allowFullScreen="true">
-        </iframe>
+        <div id="iframeContainer">
+            <iframe title="Cover Pool Information Quarterly"
+                    src="https://app.powerbi.com/reportEmbed?reportId=81ee266a-2799-4577-bba8-8f96aa531bdf&autoAuth=true&ctid=2788b953-1971-4b82-9986-b668acbd5846"
+                    frameborder="0"
+                    allowFullScreen="true">
+            </iframe>
+        </div>
     </div>
     <!-- Contenedor para Abanca Corporativo Completo Month -->
-    <div id="monthlyContainer" style="display: none; width: 100%;">
+    <div id="monthlyContainer" style="display: none;">
         <h2 class="presentation-title">Abanca Corporativo Completo Month</h2>
-        <iframe title="Cover Pool Information Monthly"
-                src="https://app.powerbi.com/reportEmbed?reportId=0fc44c3d-8e91-4312-8000-b10d3dc820bd&autoAuth=true&ctid=2788b953-1971-4b82-9986-b668acbd5846"
-                frameborder="0"
-                allowFullScreen="true">
-        </iframe>
+        <div id="iframeContainer">
+            <iframe title="Cover Pool Information Monthly"
+                    src="https://app.powerbi.com/reportEmbed?reportId=0fc44c3d-8e91-4312-8000-b10d3dc820bd&autoAuth=true&ctid=2788b953-1971-4b82-9986-b668acbd5846"
+                    frameborder="0"
+                    allowFullScreen="true">
+            </iframe>
+        </div>
     </div>
 
     <script>
