--- a/covered.html
+++ b/covered.html
@@ -31,6 +31,7 @@
             font-size: 18px;
             margin-top: 20px;
             margin-bottom: 5px;
+            margin-left: 20px;
         }
         /* Estilos para el iframe */
         #iframeContainer {
