--- a/covered.html
+++ b/covered.html
@@ -41,12 +41,12 @@
         }
         /* Estilos para el iframe */
         #iframeContainer {
-            width: 100%; /* Ajustar el ancho del contenedor del iframe al 100% */
+            width: 100vh; /* Ajustar el ancho del contenedor del iframe al 100% */
             display: flex;
             justify-content: center; /* Centrar horizontalmente el contenido del iframe */
         }
         #iframeContainer iframe {
-            width: 100%; /* Ajustar el ancho del iframe al 100% del contenedor */
+            width: 100vh; /* Ajustar el ancho del iframe al 100% del contenedor */
             height: 100vh; /* Ajustar la altura para que ocupe toda la pantalla */
             max-width: 100%; /* Asegurar que el ancho máximo no supere el ancho de la pantalla */
             border: none; /* Eliminar el borde del iframe */
