--- a/covered.html
+++ b/covered.html
@@ -41,7 +41,7 @@
         }
         /* Estilos para el iframe */
         #iframeContainer {
-            height: 100vh; /* Ajustar el ancho del contenedor del iframe al 100% */
+            height: 100%; /* Ajustar el ancho del contenedor del iframe al 100% */
             display: flex;
             justify-content: center; /* Centrar horizontalmente el contenido del iframe */
         }
