--- a/covered.html
+++ b/covered.html
@@ -97,7 +97,7 @@
         <div id="quarterlyContainer" style="display: none;">
             <h2 class="presentation-title">Abanca Corporativo Completo Quarter</h2>
             <div id="iframeContainer">
-                <iframe title="Cover Pool Information Quarterly"
+                <iframe title="Cover Pool Quarterly Information"
                         src="https://app.powerbi.com/reportEmbed?reportId=81ee266a-2799-4577-bba8-8f96aa531bdf&autoAuth=true&ctid=2788b953-1971-4b82-9986-b668acbd5846"
                         frameborder="0"
                         allowFullScreen="true">
@@ -108,7 +108,7 @@
         <div id="monthlyContainer" style="display: none;">
             <h2 class="presentation-title">Abanca Corporativo Completo Month</h2>
             <div id="iframeContainer">
-                <iframe title="Cover Pool Information Monthly"
+                <iframe title="Cover Pool Monthly Information"
                         src="https://app.powerbi.com/reportEmbed?reportId=0fc44c3d-8e91-4312-8000-b10d3dc820bd&autoAuth=true&ctid=2788b953-1971-4b82-9986-b668acbd5846"
                         frameborder="0"
                         allowFullScreen="true">
