--- a/covered.html
+++ b/covered.html
@@ -41,12 +41,15 @@
         }
         /* Estilos para el iframe */
         #iframeContainer {
-            width: 100vh; /* Ajustar el ancho del contenedor del iframe al 100% */
+            width: 100%; /* Ajustar el ancho del contenedor del iframe al 100% */
             display: flex;
             justify-content: center; /* Centrar horizontalmente el contenido del iframe */
         }
         #iframeContainer iframe {
             border: none; /* Eliminar el borde del iframe */
+            width: 100%; /* Ajustar el ancho del iframe al 100% del contenedor */
+            height: calc(100vh - 50px); /* Ajustar la altura para que ocupe toda la pantalla excepto la altura del header */
+            max-width: 100%; /* Asegurar que el ancho máximo no supere el ancho de la pantalla */
         }
         /* Estilos para la pantalla de selección de informes */
         #selectReportContainer {
@@ -63,6 +66,10 @@
         }
         #selectReportContainer select {
             margin-top: 10px;
+        }
+        /* Estilos para los contenedores de informes */
+        #quarterlyContainer, #monthlyContainer {
+            width: 100%;
         }
     </style>
 </head>
