--- a/covered.html
+++ b/covered.html
@@ -69,7 +69,8 @@
         }
         /* Estilos para los contenedores de informes */
         #quarterlyContainer, #monthlyContainer {
-            width: 100%;
+            width: calc(100% - 40px);
+            margin: 20px;
         }
     </style>
 </head>
@@ -161,5 +162,8 @@
             }
         </script>
     </div>
+</body>
+</html>
+
 </body>
 </html>
