--- a/covered.html
+++ b/covered.html
@@ -99,6 +99,9 @@
         .show-menu #menuButton {
             display: flex;
         }
+        .show-menu #selectReportContainer {
+            display: flex;
+        }
     </style>
 </head>
 <body>
@@ -202,4 +205,3 @@
     </div>
 </body>
 </html>
-
