--- a/covered.html
+++ b/covered.html
@@ -112,7 +112,7 @@
 
         <!-- Contenedor para Abanca Corporativo Completo Quarter -->
         <div id="quarterlyContainer" style="display: none;">
-            <h2 class="presentation-title">Cover Pool Quarterly Information<a class="download-button" href="https://acgalacapital-my.sharepoint.com/:p:/g/personal/fortiz_bekafinance_com/EdIDpbzTg7ZNtvkuzlB2AaIB4CxA0qpSX1QkZzMKFrEeXw?e=ePpVBt" download><img src="https://static.vecteezy.com/system/resources/previews/001/187/075/non_2x/download-png.png"></a></h2>
+            <h2 class="presentation-title">Cover Pool Quarterly Information<a class="download-button" href="https://acgalacapital-my.sharepoint.com/personal/fortiz_bekafinance_com/Documents/Escritorio/Abanca/Microsoft-Power-BI-Storytelling.pptx?web=1" download><img src="https://static.vecteezy.com/system/resources/previews/001/187/075/non_2x/download-png.png"></a></h2>
             <div id="iframeContainer">
                 <iframe title="Cover Pool Quarterly Information"
                         src="https://app.powerbi.com/reportEmbed?reportId=81ee266a-2799-4577-bba8-8f96aa531bdf&autoAuth=true&ctid=2788b953-1971-4b82-9986-b668acbd5846"
@@ -123,7 +123,7 @@
         </div>
         <!-- Contenedor para Abanca Corporativo Completo Month -->
         <div id="monthlyContainer" style="display: none;">
-            <h2 class="presentation-title">Cover Pool Monthly Information<a class="download-button" href="https://acgalacapital-my.sharepoint.com/:p:/g/personal/fortiz_bekafinance_com/EdIDpbzTg7ZNtvkuzlB2AaIB4CxA0qpSX1QkZzMKFrEeXw?e=ePpVBt" download><img src="https://static.vecteezy.com/system/resources/previews/001/187/075/non_2x/download-png.png"></a></h2>
+            <h2 class="presentation-title">Cover Pool Monthly Information<a class="download-button" href="https://acgalacapital-my.sharepoint.com/personal/fortiz_bekafinance_com/Documents/Escritorio/Abanca/Microsoft-Power-BI-Storytelling.pptx?web=1" download><img src="https://static.vecteezy.com/system/resources/previews/001/187/075/non_2x/download-png.png"></a></h2>
             <div id="iframeContainer">
                 <iframe title="Cover Pool Monthly Information"
                         src="https://app.powerbi.com/reportEmbed?reportId=0fc44c3d-8e91-4312-8000-b10d3dc820bd&autoAuth=true&ctid=2788b953-1971-4b82-9986-b668acbd5846"
