--- a/covered.html
+++ b/covered.html
@@ -3,7 +3,8 @@
 <head>
     <title>Covered Bonds Investor Presentation</title>
     <!-- Agregar el enlace al favicon -->
-    <img src="https://play-lh.googleusercontent.com/p8n-LjuwErRjEWDJh53wEwL_jDccfmDMXB547j_qifRJ_VWf0ofZ33l7sOMvxZtO0w=w600-h300-pc0xffffff-pd">
+    <link rel="icon" href="https://play-lh.googleusercontent.com/p8n-LjuwErRjEWDJh53wEwL_jDccfmDMXB547j_qifRJ_VWf0ofZ33l7sOMvxZtO0w=w600-h300-pc0xffffff-pd">
+    <style>
     <style>
         body {
             font-family: Arial, sans-serif;
